# respublica

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  conanfile.txt
.github/ISSUE_TEMPLATE/: ask_question.yml
data/proto/: CMakeLists.txt
data/proto/koinos/broadcast/: broadcast.proto
data/proto/koinos/protocol/: protocol.proto
data/proto/koinos/rpc/chain/: chain_rpc.proto
data/proto/koinos/rpc/koindx_tracker/: koindx_tracker_rpc.proto
data/proto/koinos/rpc/mempool/: mempool_rpc.proto
include/koinos/: controller.hpp  encode.hpp  log.hpp  memory.hpp  program.hpp  protocol.hpp  vm.hpp  vm_manager.hpp
include/respublica/: controller.hpp  crypto.hpp  encode.hpp  log.hpp  memory.hpp  net.hpp  program.hpp  protocol.hpp  state_db.hpp  vm.hpp
src/: CMakeLists.txt  koinos_chain.cpp  koinos_vm_driver.cpp  net_client.cpp
src/koinos/: CMakeLists.txt  log.cpp
src/koinos/chain/: CMakeLists.txt  call_stack.cpp  call_stack.hpp  chronicler.cpp  chronicler.hpp  coin.cpp  coin.hpp  controller.cpp  error.cpp  errors.cpp  errors.hpp  execution_context.cpp  execution_context.hpp  host_api.cpp  host_api.hpp  indexer.cpp  program.hpp  resource_meter.cpp  resource_meter.hpp  session.cpp  session.hpp  state.cpp  system_calls.cpp  system_interface.hpp  types.hpp
src/koinos/controller/: CMakeLists.txt  call_stack.cpp  call_stack.hpp  chronicler.cpp  chronicler.hpp  coin.cpp  coin.hpp  controller.cpp  error.cpp  execution_context.cpp  execution_context.hpp  frame_recorder.cpp  frame_recorder.hpp  host_api.cpp  host_api.hpp  program.hpp  program_stack.cpp  program_stack.hpp  resource_meter.cpp  resource_meter.hpp  session.cpp  session.hpp  state.cpp  system_interface.hpp
src/koinos/crypto/: CMakeLists.txt  elliptic.cpp  elliptic.test.cpp  hash.cpp  hash.test.cpp  merkle_tree.test.cpp  multihash.cpp  multihash.test.cpp  public_key.cpp  public_key.test.cpp  public_key_view.cpp  public_key_view.test.cpp  secret_key.cpp  secret_key.test.cpp
src/koinos/encode/: CMakeLists.txt  base58.cpp  base58.test.cpp  error.cpp  hex.cpp  hex.test.cpp
src/koinos/error/: CMakeLists.txt  error.cpp
src/koinos/log/: CMakeLists.txt  log.cpp  log.test.cpp
src/koinos/memory/: CMakeLists.txt
src/koinos/program/: CMakeLists.txt  coin.cpp  error.cpp
src/koinos/protocol/: CMakeLists.txt  account.cpp  block.cpp  operation.cpp  serialization.cpp  serialization.test.cpp  transaction.cpp
src/koinos/state_db/: CMakeLists.txt  bytes_less.hpp  database.cpp  delta_index.cpp  delta_index.hpp  merge_iterator.cpp  merge_iterator.hpp  permanent_state_node.cpp  state_db.cpp  state_delta.cpp  state_delta.hpp  state_delta.test.cpp  state_node.cpp  temporary_state_node.cpp
src/koinos/state_db/backends/: backend.cpp  backend.hpp  backend.test.cpp  iterator.cpp  iterator.hpp
src/koinos/state_db/backends/map/: map_backend.cpp  map_backend.hpp  map_backend.test.cpp  map_iterator.cpp  map_iterator.hpp  types.hpp
src/koinos/state_db/backends/rocksdb/: object_cache.hpp  rocksdb_backend.cpp  rocksdb_backend.hpp  rocksdb_iterator.cpp  rocksdb_iterator.hpp
src/koinos/vm/: CMakeLists.txt  error.cpp  module_cache.cpp  module_cache.hpp  program_context.cpp  program_context.hpp  virtual_machine.cpp
src/koinos/vm_manager/: CMakeLists.txt  bytes_less.hpp  error.cpp  host_api.hpp  timer.cpp  vm_backend.cpp  vm_backend.hpp
src/koinos/vm_manager/fizzy/: fizzy_vm_backend.cpp  fizzy_vm_backend.hpp  module_cache.cpp  module_cache.hpp
src/koinos/vm_manager/iwasm/: exceptions.hpp  iwasm_vm_backend.cpp  iwasm_vm_backend.hpp  module_cache.cpp  module_cache.hpp
src/respublica/: CMakeLists.txt
src/respublica/controller/: CMakeLists.txt  call_stack.cpp  call_stack.hpp  controller.cpp  error.cpp  execution_context.cpp  execution_context.hpp  frame_recorder.cpp  frame_recorder.hpp  host_api.cpp  host_api.hpp  program_stack.cpp  program_stack.hpp  resource_meter.cpp  resource_meter.hpp  session.cpp  session.hpp  state.cpp
src/respublica/crypto/: CMakeLists.txt  hash.cpp  hash.test.cpp  merkle_tree.test.cpp  public_key.cpp  public_key.test.cpp  secret_key.cpp  secret_key.test.cpp
src/respublica/encode/: CMakeLists.txt  base58.cpp  base58.test.cpp  error.cpp  hex.cpp  hex.test.cpp
src/respublica/log/: CMakeLists.txt  log.cpp
src/respublica/memory/: CMakeLists.txt
src/respublica/net/: CMakeLists.txt  client.cpp  error.cpp  session.cpp  session.hpp  upnp.cpp  upnp.hpp
src/respublica/program/: CMakeLists.txt  coin.cpp  error.cpp
src/respublica/protocol/: CMakeLists.txt  account.cpp  block.cpp  operation.cpp  transaction.cpp
src/respublica/state_db/: CMakeLists.txt  database.cpp  delta_index.cpp  delta_index.hpp  error.cpp  permanent_state_node.cpp  state_delta.cpp  state_delta.test.cpp  state_node.cpp  temporary_state_node.cpp
src/respublica/state_db/backends/: backend.cpp  backend.test.cpp  iterator.cpp
src/respublica/state_db/backends/map/: map_backend.cpp  map_backend.hpp  map_backend.test.cpp  map_iterator.cpp  map_iterator.hpp  types.hpp
src/respublica/state_db/backends/rocksdb/: object_cache.cpp  object_cache.hpp  rocksdb_backend.cpp  rocksdb_backend.hpp  rocksdb_iterator.cpp  rocksdb_iterator.hpp
src/respublica/vm/: CMakeLists.txt  error.cpp  module_cache.cpp  module_cache.hpp  program_context.cpp  program_context.hpp  virtual_machine.cpp
tests/: CMakeLists.txt  controller_test.cpp  stack_test.cpp  thunk_test.cpp  transfer_benchmark.cpp
tests/benchmark/: CMakeLists.txt  benchmark.cpp
tests/fixture/: CMakeLists.txt  contracts.cpp  fixture.cpp  programs.cpp
tests/fixture/include/koinos/tests/: contracts.hpp  fixture.hpp
tests/fixture/include/koinos/tests/wasm/: koin.hpp
tests/fixture/include/test/: fixture.hpp  programs.hpp
tests/fixture/include/test/wasm/: koin.hpp  token.hpp
tests/integration/: CMakeLists.txt  integration.cpp
tests/profile/: CMakeLists.txt  profile.cpp
tools/cmake/: CodeCoverage.cmake  Koinos.cmake  KoinosAddPackage.cmake  KoinosCompilerOptions.cmake  KoinosCoverage.cmake  KoinosFormat.cmake  KoinosGit.cmake  (+6 more)
(+121 files in other folders)
